Big Honkin' Update
This is a massive blob update that's being pushed because I'm a terrible programmer who should be ashamed.
There were no granunlar commits during this time. Consider it 'stream of conciousness' programming. I plan
on refactoring this soon. Please don't judge me by it!

--- a/index.html
+++ b/index.html
@@ -4,27 +4,13 @@
     <meta charset="utf-8">
     <title>Hello World!</title>
     <script type="text/javascript" src="node_modules/angular/angular.js"></script>
-    <script type="text/javascript" src="tokens.js"></script>
-    <script type="text/javascript" src="app.js"></script>
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.2/angular-route.js"></script>
+    <script type="text/javascript" src="js/tokens.js"></script>
+    <script type="text/javascript" src="js/app.js"></script>
   </head>
   <body>
     <div class="container" ng-app="npaScheduler">
-      <div ng-controller="timeOffController">
-        <input type="text" ng-model="event.description" />
-        <br>
-        <input type="date" date-parse ng-model="event.start" />
-        <br>
-        <input type="date" date-parse ng-model="event.end" />
-        <br>
-        <button ng-click="scheduleTimeOff()">Do it!</button>
-        <br>
-        <p>
-          Start: {{event.start.iso}} | End: {{event.end.iso}}
-          Description: {{event.description}}
-        </p>
-        <p>Status: {{message}}</p>
-      </div>
+        <ng-view></ng-view>
     </div>
-
   </body>
 </html>
